borre el archivo de mi-practica

--- a/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
+++ b/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
@@ -18,10 +18,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "es mayor a 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "var= 23\n",
+    "if var > 0:\n",
+    "    print('es mayor a 0')\n",
+    "else: print('es menor a cero')"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +46,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " el tipo de dato es diferente \n"
+     ]
+    }
+   ],
+   "source": [
+    "var1= 12\n",
+    "var2= \"12\"\n",
+    "if var1 == var2:\n",
+    "    print('el tipo de dato es el mismo')\n",
+    "else: print(' el tipo de dato es diferente ')"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +75,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el numero  1  es impar\n",
+      "el numero  2  es par\n",
+      "el numero  3  es impar\n",
+      "el numero  4  es par\n",
+      "el numero  5  es impar\n",
+      "el numero  6  es par\n",
+      "el numero  7  es impar\n",
+      "el numero  8  es par\n",
+      "el numero  9  es impar\n",
+      "el numero  10  es par\n",
+      "el numero  11  es impar\n",
+      "el numero  12  es par\n",
+      "el numero  13  es impar\n",
+      "el numero  14  es par\n",
+      "el numero  15  es impar\n",
+      "el numero  16  es par\n",
+      "el numero  17  es impar\n",
+      "el numero  18  es par\n",
+      "el numero  19  es impar\n",
+      "el numero  20  es par\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,21):\n",
+    "    if i % 2 ==0:\n",
+    "        print('el numero ', str(i), ' es par' )\n",
+    "    else:\n",
+    "        print('el numero ', str(i), ' es impar')"
+   ]
   },
   {
    "attachments": {},
@@ -63,10 +123,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "8\n",
+      "27\n",
+      "64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,6):\n",
+    "    print(i ** 3)"
+   ]
   },
   {
    "attachments": {},
@@ -78,10 +152,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "n= 20\n",
+    "for i in range(0, n):\n",
+    "    pass\n",
+    "print(i)"
+   ]
   },
   {
    "attachments": {},
@@ -93,10 +180,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " el factorial es 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "b= 10\n",
+    "if (type(b)== int):\n",
+    "    if (b > 0):\n",
+    "        factorial = b\n",
+    "        while (b > 2):\n",
+    "            b = b - 1\n",
+    "        factorial = factorial * b\n",
+    "        print(' el factorial es', factorial)\n",
+    "    else: print('el factorial noes mayor a cero')\n",
+    "else:print('el factorial no es un entero')\n",
+    "        "
+   ]
   },
   {
    "attachments": {},
@@ -108,10 +215,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " samy tiene 4\n",
+      "samy cumple 5\n",
+      "samy cumple 6\n",
+      "samy cumple 7\n",
+      "samy cumple 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "samy=4\n",
+    "while samy < 5:\n",
+    "    print(' samy tiene '+ str(samy))\n",
+    "    for i in range(4):\n",
+    "        samy += 1\n",
+    "        print('samy cumple ' + str(samy))"
+   ]
   },
   {
    "attachments": {},
@@ -123,10 +249,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "samy cumple 5\n",
+      "samy cumple 6\n",
+      "samy cumple 7\n",
+      "samy cumple 8\n",
+      "samy cumple 9\n",
+      "samy cumple 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "samy=4\n",
+    "for i in range(4): \n",
+    "    while samy < 10:\n",
+    "        samy += 1\n",
+    "        print('samy cumple ' + str(samy))"
+   ]
   },
   {
    "attachments": {},
@@ -138,10 +283,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "tope= 30\n",
+    "n= 0\n",
+    "primo= True\n",
+    "while n < tope:\n",
+    "    for div in range(2, n):\n",
+    "        if (n % div ==0):\n",
+    "            primo=False\n",
+    "    if primo:\n",
+    "        print(n)  \n",
+    "    else: primo = True\n",
+    "    n += 1  "
+   ]
   },
   {
    "attachments": {},
@@ -153,10 +329,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "tope= 30\n",
+    "n= 0\n",
+    "primo= True\n",
+    "while n < tope:\n",
+    "    for div in range(2, n):\n",
+    "        if (n % div ==0):\n",
+    "            primo=False\n",
+    "            break\n",
+    "    if primo:\n",
+    "        print(n)  \n",
+    "    else: primo = True\n",
+    "    n += 1  "
+   ]
   },
   {
    "attachments": {},
@@ -168,10 +376,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n",
+      "ciclos sin break 378\n"
+     ]
+    }
+   ],
+   "source": [
+    "ciclos_sin_break=0\n",
+    "tope= 30\n",
+    "n= 0\n",
+    "primo= True\n",
+    "while n < tope:\n",
+    "    for div in range(2, n):\n",
+    "        ciclos_sin_break += 1\n",
+    "        if (n % div ==0):\n",
+    "            primo=False\n",
+    "    if primo:\n",
+    "        print(n)  \n",
+    "    else: primo = True\n",
+    "    n += 1\n",
+    "    \n",
+    "print('ciclos sin break ' + str(ciclos_sin_break) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n",
+      "ciclos sin break 378\n",
+      "Se optimizó a un 0.3544973544973545% de ciclos aplicando break\n"
+     ]
+    }
+   ],
+   "source": [
+    "ciclos_con_break=0\n",
+    "tope= 30\n",
+    "n= 0\n",
+    "primo= True\n",
+    "while n < tope:\n",
+    "    for div in range(2, n):\n",
+    "        ciclos_con_break += 1\n",
+    "        if (n % div ==0):\n",
+    "            primo=False\n",
+    "            break\n",
+    "    if primo:\n",
+    "        print(n)  \n",
+    "    else: primo = True\n",
+    "    n += 1\n",
+    "    \n",
+    "print('ciclos sin break ' + str(ciclos_sin_break) )\n",
+    "print('Se optimizó a un ' + str(ciclos_con_break/ciclos_sin_break) + '% de ciclos aplicando break')"
+   ]
   },
   {
    "attachments": {},
@@ -183,10 +473,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "108 este numero es divisible por 12\n",
+      "120 este numero es divisible por 12\n",
+      "132 este numero es divisible por 12\n",
+      "144 este numero es divisible por 12\n",
+      "156 este numero es divisible por 12\n",
+      "168 este numero es divisible por 12\n",
+      "180 este numero es divisible por 12\n",
+      "192 este numero es divisible por 12\n",
+      "204 este numero es divisible por 12\n",
+      "216 este numero es divisible por 12\n",
+      "228 este numero es divisible por 12\n",
+      "240 este numero es divisible por 12\n",
+      "252 este numero es divisible por 12\n",
+      "264 este numero es divisible por 12\n",
+      "276 este numero es divisible por 12\n",
+      "288 este numero es divisible por 12\n",
+      "300 este numero es divisible por 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "n= 99\n",
+    "while n <= 300:\n",
+    "    n+= 1\n",
+    "    if n % 12 != 0:\n",
+    "        continue\n",
+    "    print(n, 'este numero es divisible por 12')"
+   ]
   },
   {
    "attachments": {},
@@ -198,10 +519,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "este numero no es primo\n"
+     ]
+    }
+   ],
+   "source": [
+    "primo= int(input('quieres encontrar el siguiente numero primo'))\n",
+    "if primo % 2 == 0 :\n",
+    "    print('este numero no es primo')\n",
+    "else: \n",
+    "    print(primo)\n",
+    "    \n"
+   ]
   },
   {
    "attachments": {},
@@ -213,10 +549,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "este es el numero que buscaba102\n"
+     ]
+    }
+   ],
+   "source": [
+    "n= 99\n",
+    "while n <=300:\n",
+    "    if n % 6 == 0:\n",
+    "        print('este es el numero que buscaba' + str(n))\n",
+    "        break\n",
+    "    n+=1\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -238,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
