--- a/M05_estructuradedatos/Prep_Course_Homework_05.ipynb
+++ b/M05_estructuradedatos/Prep_Course_Homework_05.ipynb
@@ -18,10 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Paris', 'Caracas', 'Tokio', 'Seul', 'Bogota']\n"
+     ]
+    }
+   ],
+   "source": [
+    "mundo= ['Paris', 'Caracas', 'Tokio', 'Seul', 'Bogota']\n",
+    "print(mundo)"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +44,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Caracas'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mundo[1]"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +72,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Caracas', 'Tokio', 'Seul']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mundo[1:4]"
+   ]
   },
   {
    "attachments": {},
@@ -63,10 +100,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(mundo)"
+   ]
   },
   {
    "attachments": {},
@@ -78,10 +128,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Tokio', 'Seul', 'Bogota']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mundo[2:]"
+   ]
   },
   {
    "attachments": {},
@@ -93,10 +156,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Paris', 'Caracas', 'Tokio', 'Seul']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mundo[:4]"
+   ]
   },
   {
    "attachments": {},
@@ -111,7 +187,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mundo.append('Marcella')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mundo.append('Paris')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Paris', 'Caracas', 'Tokio', 'Seul', 'Bogota', 'Marcella', 'Marcella', 'Paris', 'Marcella', 'Paris']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mundo)"
+   ]
   },
   {
    "attachments": {},
@@ -123,10 +227,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Paris', 'Caracas', 'Tokio', 'Medellin', 'Seul', 'Bogota', 'Marcella', 'Marcella', 'Paris', 'Marcella', 'Paris']\n"
+     ]
+    }
+   ],
+   "source": [
+    "mundo.insert(3, 'Medellin')\n",
+    "print(mundo)"
+   ]
   },
   {
    "attachments": {},
@@ -138,10 +253,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Paris', 'Caracas', 'Tokio', 'Medellin', 'Seul', 'Bogota', 'Marcella', 'Marcella', 'Paris', 'Marcella', 'Paris', 'europa', 'africa', 'asia', 'america']\n"
+     ]
+    }
+   ],
+   "source": [
+    "otra_list= ['europa', 'africa', 'asia', 'america']\n",
+    "mundo.extend(otra_list)\n",
+    "print(mundo)"
+   ]
   },
   {
    "attachments": {},
@@ -153,10 +280,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mundo.index('Paris')"
+   ]
   },
   {
    "attachments": {},
@@ -168,10 +308,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'Montevideo' is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[40], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmundo\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mMontevideo\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mValueError\u001b[0m: 'Montevideo' is not in list"
+     ]
+    }
+   ],
+   "source": [
+    "mundo.index('Montevideo')"
+   ]
   },
   {
    "attachments": {},
@@ -183,10 +337,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Caracas', 'Tokio', 'Medellin', 'Seul', 'Bogota', 'Marcella', 'Marcella', 'Marcella', 'Paris', 'europa', 'africa', 'asia', 'america']\n"
+     ]
+    }
+   ],
+   "source": [
+    "mundo.remove('Paris')\n",
+    "print(mundo)"
+   ]
   },
   {
    "attachments": {},
@@ -198,10 +363,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[43], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmundo\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mMontevideo\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+     ]
+    }
+   ],
+   "source": [
+    "mundo.remove('Montevideo')"
+   ]
   },
   {
    "attachments": {},
@@ -213,10 +392,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'america'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "america= mundo.pop()\n",
+    "america"
+   ]
   },
   {
    "attachments": {},
@@ -228,10 +421,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Caracas',\n",
+       " 'Tokio',\n",
+       " 'Medellin',\n",
+       " 'Seul',\n",
+       " 'Bogota',\n",
+       " 'Marcella',\n",
+       " 'Marcella',\n",
+       " 'Marcella',\n",
+       " 'Paris',\n",
+       " 'europa',\n",
+       " 'africa',\n",
+       " 'asia',\n",
+       " 'Caracas',\n",
+       " 'Tokio',\n",
+       " 'Medellin',\n",
+       " 'Seul',\n",
+       " 'Bogota',\n",
+       " 'Marcella',\n",
+       " 'Marcella',\n",
+       " 'Marcella',\n",
+       " 'Paris',\n",
+       " 'europa',\n",
+       " 'africa',\n",
+       " 'asia',\n",
+       " 'Caracas',\n",
+       " 'Tokio',\n",
+       " 'Medellin',\n",
+       " 'Seul',\n",
+       " 'Bogota',\n",
+       " 'Marcella',\n",
+       " 'Marcella',\n",
+       " 'Marcella',\n",
+       " 'Paris',\n",
+       " 'europa',\n",
+       " 'africa',\n",
+       " 'asia',\n",
+       " 'Caracas',\n",
+       " 'Tokio',\n",
+       " 'Medellin',\n",
+       " 'Seul',\n",
+       " 'Bogota',\n",
+       " 'Marcella',\n",
+       " 'Marcella',\n",
+       " 'Marcella',\n",
+       " 'Paris',\n",
+       " 'europa',\n",
+       " 'africa',\n",
+       " 'asia']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mundo * 4"
+   ]
   },
   {
    "attachments": {},
@@ -243,10 +496,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20)\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_tupla= (1,2,3, 4,5, 6,7, 8,9,10,11,12,13,14,15,16,17,18,19,20)\n",
+    "print(new_tupla)"
+   ]
   },
   {
    "attachments": {},
@@ -258,10 +522,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(11, 12, 13, 14, 15, 16)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(new_tupla[10:16])"
+   ]
   },
   {
    "attachments": {},
@@ -273,10 +547,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(20 in new_tupla)\n",
+    "30 in new_tupla"
+   ]
   },
   {
    "attachments": {},
@@ -288,10 +583,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ya estaba agregado\n"
+     ]
+    }
+   ],
+   "source": [
+    "elemento= 'Paris'\n",
+    "if elemento in mundo:\n",
+    "    print('ya estaba agregado')\n",
+    "else: \n",
+    "    mundo.append('Paris')\n",
+    "    print(' el elemnto' + elemento + 'no estaba agregado')"
+   ]
   },
   {
    "attachments": {},
@@ -303,10 +613,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mundo.count('Marcella'))\n",
+    "print(new_tupla.count(15))"
+   ]
   },
   {
    "attachments": {},
@@ -318,10 +640,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(new_tupla))"
+   ]
   },
   {
    "attachments": {},
@@ -333,10 +665,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuple(new_tupla)\n",
+    "uno,dos,tres,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_= new_tupla\n",
+    "print(uno)\n",
+    "print(dos)\n",
+    "print(tres)"
+   ]
   },
   {
    "attachments": {},
@@ -348,10 +696,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ciudad': ['Caracas', 'Tokio', 'Medellin', 'Seul', 'Bogota', 'Marcella', 'Marcella', 'Marcella', 'Paris', 'europa', 'africa', 'asia'], 'pais': ['venezuela', 'espa;a', 'japon', 'corea', 'francia'], 'continente': ['america', 'europa', 'asia']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dicc={'ciudad': mundo,\n",
+    "    'pais': ['venezuela', 'espa;a', 'japon', 'corea', 'francia'],\n",
+    "    'continente': ['america', 'europa', 'asia']\n",
+    "}\n",
+    "print(dicc)"
+   ]
   },
   {
    "attachments": {},
@@ -363,10 +725,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['ciudad', 'pais', 'continente'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dicc.keys())"
+   ]
   },
   {
    "attachments": {},
@@ -378,10 +750,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Caracas', 'Tokio', 'Medellin', 'Seul', 'Bogota', 'Marcella', 'Marcella', 'Marcella', 'Paris', 'europa', 'africa', 'asia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dicc['ciudad'])"
+   ]
   }
  ],
  "metadata": {
@@ -403,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
