--- a/M08_clasesyOOP/Prep_Course_Homework_08.ipynb
+++ b/M08_clasesyOOP/Prep_Course_Homework_08.ipynb
@@ -1,12 +1,20 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "## Clases y Programación Orientada a Objetos"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -290,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,16 +386,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lista= Modulo7([1,2,3,4,5,6,7,8,9,12,3,4,1,1,23,34,5])"
+    "lista= Modulo7([1,2,3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -396,21 +404,7 @@
      "text": [
       "1 grados Kelvin  son  -457.87 grados Farenheit\n",
       "2 grados Kelvin  son  -456.07 grados Farenheit\n",
-      "3 grados Kelvin  son  -454.27 grados Farenheit\n",
-      "4 grados Kelvin  son  -452.46999999999997 grados Farenheit\n",
-      "5 grados Kelvin  son  -450.66999999999996 grados Farenheit\n",
-      "6 grados Kelvin  son  -448.87 grados Farenheit\n",
-      "7 grados Kelvin  son  -447.07 grados Farenheit\n",
-      "8 grados Kelvin  son  -445.27 grados Farenheit\n",
-      "9 grados Kelvin  son  -443.46999999999997 grados Farenheit\n",
-      "12 grados Kelvin  son  -438.07 grados Farenheit\n",
-      "3 grados Kelvin  son  -454.27 grados Farenheit\n",
-      "4 grados Kelvin  son  -452.46999999999997 grados Farenheit\n",
-      "1 grados Kelvin  son  -457.87 grados Farenheit\n",
-      "1 grados Kelvin  son  -457.87 grados Farenheit\n",
-      "23 grados Kelvin  son  -418.27 grados Farenheit\n",
-      "34 grados Kelvin  son  -398.46999999999997 grados Farenheit\n",
-      "5 grados Kelvin  son  -450.66999999999996 grados Farenheit\n"
+      "3 grados Kelvin  son  -454.27 grados Farenheit\n"
      ]
     }
    ],
@@ -494,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
