--- a/M09_errorhandling/Prep_Course_Homework_09.ipynb
+++ b/M09_errorhandling/Prep_Course_Homework_09.ipynb
@@ -18,10 +18,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "import sys\n",
+    "sys.path.append(r'M09_errorhandling/puntonumero9.py')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import puntonumero9 as p\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "holis\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": " Se esperaba una lista de números enteros",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[77], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m m1\u001b[38;5;241m=\u001b[39m \u001b[43mp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mModulo7\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43meee\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Emanuel\\Desktop\\Python-Prep\\M09_errorhandling\\puntonumero9.py:7\u001b[0m, in \u001b[0;36mModulo7.__init__\u001b[1;34m(self, lista_numeros)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m lista_numeros:\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(i) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mint\u001b[39m :\n\u001b[1;32m----> 7\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m Se esperaba una lista de números enteros\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      8\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m  \n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(lista_numeros) \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
+      "\u001b[1;31mValueError\u001b[0m:  Se esperaba una lista de números enteros"
+     ]
+    }
+   ],
+   "source": [
+    "m1= p.Modulo7('eee')\n",
+    "\n"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +77,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'puntonumero9' from 'c:\\\\Users\\\\Emanuel\\\\Desktop\\\\Python-Prep\\\\M09_errorhandling\\\\puntonumero9.py'>"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import importlib\n",
+    "importlib.reload(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2)"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1=p.Modulo7([1,2,1,3,4,5,6,7,8])\n",
+    "m1.repetidos()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-55.8, -54.0, -55.8, -52.2, -50.4, -48.6, -46.8, -45.0, -43.2]"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1.conversion_grados('Farenheit', 'Celsius')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "los parametros esperados son: ['Celsius', 'Kelvin', 'Farenheit']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1.conversion_grados(1,2)"
+   ]
   },
   {
    "attachments": {},
@@ -53,10 +179,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import unittest\n",
+    "class PruebaError(unittest.TestCase):\n",
+    "    def valor_incorrecto(self):\n",
+    "        parametro= 'hola'\n",
+    "        self.assertRaises(ValueError, p.Modulo7, parametro )\n",
+    "        \n",
+    "    def valor_corrector(self):\n",
+    "        parametro= [1,2,3,4]\n",
+    "        m1=p.Modulo7(parametro)\n",
+    "        self.assertEqual(m1.lista_numeros, parametro)\n",
+    "        \n",
+    "    def test_repetidos(self):\n",
+    "        lista= [1,2,3,3,3,1,1,1]\n",
+    "        m1= p.Modulo7(lista)\n",
+    "        prueba= m1.repetidos()\n",
+    "        resultado= (1,4)\n",
+    "        self.assertEqual(prueba,resultado)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'puntonumero9' from 'c:\\\\Users\\\\Emanuel\\\\Desktop\\\\Python-Prep\\\\M09_errorhandling\\\\puntonumero9.py'>"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importlib.reload(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_repetidos (__main__.PruebaError.test_repetidos) ... ok\n",
+      "test_factorial (__main__.PruebaFactorial.test_factorial) ... ok\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 2 tests in 0.009s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.main.TestProgram at 0x2b1295012e0>"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unittest.main(argv=[''], verbosity=2, exit=False)"
+   ]
   },
   {
    "attachments": {},
@@ -68,10 +265,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Se ha creado una lista vacía.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[85], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m m1\u001b[38;5;241m=\u001b[39m\u001b[43mp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mModulo7\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Emanuel\\Desktop\\Python-Prep\\M09_errorhandling\\puntonumero9.py:11\u001b[0m, in \u001b[0;36mModulo7.__init__\u001b[1;34m(self, lista_numeros)\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m  \n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(lista_numeros) \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m---> 11\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSe ha creado una lista vacía.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: Se ha creado una lista vacía."
+     ]
+    }
+   ],
+   "source": [
+    "m1=p.Modulo7([])"
+   ]
   },
   {
    "attachments": {},
@@ -83,10 +295,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import unittest\n",
+    "class PruebaPrimos(unittest.TestCase):\n",
+    "    def verificar(self):\n",
+    "        lista=[1,2,3,4,5]\n",
+    "        prueba=p.Modulo7(lista)\n",
+    "        primos= prueba.verifica_primo()\n",
+    "        resultado= [True,False,True,False,True]\n",
+    "        self.assertEqual(resultado, primos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'puntonumero9' from 'c:\\\\Users\\\\Emanuel\\\\Desktop\\\\Python-Prep\\\\M09_errorhandling\\\\puntonumero9.py'>"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importlib.reload(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_repetidos (__main__.PruebaError.test_repetidos) ... ok\n",
+      "test_factorial (__main__.PruebaFactorial.test_factorial) ... ok\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 2 tests in 0.008s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.main.TestProgram at 0x2b1294a4950>"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unittest.main(argv=[''], verbosity=2, exit=False)"
+   ]
   },
   {
    "attachments": {},
@@ -98,10 +372,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class PruebaGrados(unittest.TestCase):\n",
+    "    def grados(self):\n",
+    "        lis=[1,2,3]\n",
+    "        llamado=p.Modulo7(lis)\n",
+    "        grados=llamado.conversion_grados('kelvin', 'Celsius')\n",
+    "        resultado=[457.87, 456.07, 454.27]\n",
+    "        self.assertEqual(grados, resultado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'puntonumero9' from 'c:\\\\Users\\\\Emanuel\\\\Desktop\\\\Python-Prep\\\\M09_errorhandling\\\\puntonumero9.py'>"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importlib.reload(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_repetidos (__main__.PruebaError.test_repetidos) ... ok\n",
+      "test_factorial (__main__.PruebaFactorial.test_factorial) ... ok\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 2 tests in 0.009s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.main.TestProgram at 0x2b1294a17f0>"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unittest.main(argv=[''], verbosity=2, exit=False)"
+   ]
   },
   {
    "attachments": {},
@@ -113,10 +448,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class PruebaFactorial(unittest.TestCase):\n",
+    "    def test_factorial(self):\n",
+    "        num=[1,2,3,4]\n",
+    "        m3=p.Modulo7(num)\n",
+    "        fact=m3.factor()\n",
+    "        resul= [1,2,6,24]\n",
+    "        self.assertEqual(fact, resul)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'puntonumero9' from 'c:\\\\Users\\\\Emanuel\\\\Desktop\\\\Python-Prep\\\\M09_errorhandling\\\\puntonumero9.py'>"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importlib.reload(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_repetidos (__main__.PruebaError.test_repetidos) ... ok\n",
+      "test_factorial (__main__.PruebaFactorial.test_factorial) ... ok\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 2 tests in 0.010s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.main.TestProgram at 0x2b12947f350>"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unittest.main(argv=[''], verbosity=2,exit=False)"
+   ]
   }
  ],
  "metadata": {
@@ -138,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
